Initial New Customer View - basic form

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -289,6 +289,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
