--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -239,6 +239,10 @@
     <Compile Include="Migrations\202002091937568_SeedUsers.Designer.cs">
       <DependentUpon>202002091937568_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002092136196_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\202002092136196_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>202002092136196_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -249,6 +253,7 @@
     <Compile Include="Models\MembershipTypeKind.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
@@ -489,11 +494,12 @@
     <Content Include="Views\Movies\Random.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -544,6 +550,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202002091937568_SeedUsers.resx">
       <DependentUpon>202002091937568_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002092136196_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>202002092136196_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
